cmake_minimum_required(VERSION 3.15)
project(stepik_course363_cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(stepik_course363_cpp
        1-6-12z.cpp
        1-6-12z.h
        OsnCPP_main.cpp 1-7-1Lect.cpp 1-7-1Lect.h 1-7-3z.cpp 1-7-3z.h 1-7-4z.cpp 1-7-4z.h 1-7-5z.cpp 1-7-5z.h)
